--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.35",
     "@types/react-dom": "^18.2.14",
     "antd": "^5.11.0",
+    "axios": "^1.6.2",
     "echarts": "^5.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
