--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@antv/g6": "^4.8.23",
+    "@jiaminghi/data-view-react": "^1.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +12,7 @@
     "@types/node": "^16.18.60",
     "@types/react": "^18.2.35",
     "@types/react-dom": "^18.2.14",
+    "add": "^2.0.6",
     "ahooks": "^3.7.8",
     "antd": "^5.11.0",
     "axios": "^1.6.2",
@@ -23,7 +25,8 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.21"
   },
   "scripts": {
     "start": "react-app-rewired start",
