--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@types/node": "^16.18.60",
     "@types/react": "^18.2.35",
     "@types/react-dom": "^18.2.14",
+    "@types/react-grid-layout": "^1.3.5",
     "add": "^2.0.6",
     "ahooks": "^3.7.8",
-    "antd": "^5.11.0",
+    "antd": "5.12.4",
     "axios": "^1.6.2",
     "echarts": "^5.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.4.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
