--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "5.12.4",
     "axios": "^1.6.2",
     "echarts": "^5.4.3",
+    "html-react-parser": "^5.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
