--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       env:
         SSH_PRIVATE_KEY: ${{ secrets.BACKEND_SSH_KEY }} 
         ARGS: "-avzr --delete"
-        SOURCE: "dist/*"
+        SOURCE: "build/*"
         REMOTE_HOST: ${{ secrets.BACKEND_HOST }}
         REMOTE_USER: ${{ secrets.BACKEND_USER }}
         TARGET: "/var/www/net0_react/"
