--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
 	},
 	"dependencies": {
 		"@antv/g6": "^4.8.24",
+		"@icon-park/react": "^1.4.2",
+		"@icon-park/svg": "^1.4.2",
 		"@jiaminghi/data-view-react": "^1.2.5",
+		"@types/lodash": "^4.14.202",
 		"@types/qs": "^6.9.11",
+		"@types/react-grid-layout": "^1.3.5",
 		"@types/react-redux": "^7.1.33",
 		"antd": "^5.13.3",
 		"axios": "^1.6.7",
